--- a/metaGen.ipynb
+++ b/metaGen.ipynb
@@ -1,19 +1,52 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1> META GEN </h1>"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X3FK3HL6f0uy"
+      },
+      "source": [
+        "<h1> META GEN </h1>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hello world\")"
+      ],
+      "metadata": {
+        "id": "lJo-9ASRf11M",
+        "outputId": "87b5886d-d81a-4d65-e3a3-9ee957ac43a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello world\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4,
+    "colab": {
+      "name": "metaGen.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
