add: mount google drive to google colab

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -20,6 +20,28 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Saving changes to github</h1>\n",
+    "\n",
+    "Once changes are done in google colab, just go to files, and save to GitHub repo.\n",
+    "\n",
+    "If the google colab is not linked yet, it will ask for login.\n",
+    "\n",
+    "Once done, it will ask for a commit message and branch selection to save the changes. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Mounting the storage space to the google colab</h1>\n",
+    "\n",
+    "For our repo it is included in the origian notebook."
+   ]
   }
  ],
  "metadata": {
