--- a/metaGen.ipynb
+++ b/metaGen.ipynb
@@ -11,41 +11,43 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Hello world\")"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "lJo-9ASRf11M",
-        "outputId": "87b5886d-d81a-4d65-e3a3-9ee957ac43a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lJo-9ASRf11M",
+        "outputId": "87b5886d-d81a-4d65-e3a3-9ee957ac43a2"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Hello world\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "%cd drive/MyDrive/dataset/"
       ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
     "colab": {
       "name": "metaGen.ipynb",
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
