chore: fixed a mistake

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "<h1>Mounting the storage space to the google colab</h1>\n",
     "\n",
-    "For our repo it is included in the origian notebook."
+    "For our repo it is included in the orginal notebook."
    ]
   }
  ],
