Training the model

--- a/metaGen.ipynb
+++ b/metaGen.ipynb
@@ -11,11 +11,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "lJo-9ASRf11M"
+        "id": "lJo-9ASRf11M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94e4832e-b074-4a5b-b96d-b0affa01b31f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "/content/drive/MyDrive/dataset\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
@@ -31,7 +44,7 @@
       "metadata": {
         "id": "5_ovxsY41OZX"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,131 +70,182 @@
         "from torchvision import transforms\n",
         "from torch.autograd import Variable\n",
         "from Preprocess import load_captions\n",
-        "# from DataLoader import shuffle_data"
+        "from DataLoader import shuffle_data,DataLoader"
       ],
       "metadata": {
         "id": "iBmxrg4U-mGK"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "\n",
-        "def read_captions(filepath):\n",
-        "\tcaptions_dict = {}\n",
-        "\twith open(filepath) as f:\n",
-        "\t\tfor line in f:\n",
-        "\t\t\tline_split = line.split(sep='\\t', maxsplit=1)\n",
-        "\t\t\tcaption = line_split[1][:-1]\n",
-        "\t\t\tid_image = line_split[0].split(sep='#')[0]\n",
-        "\t\t\tif id_image not in captions_dict:\n",
-        "\t\t\t\tcaptions_dict[id_image] = [caption]\n",
-        "\t\t\telse:\n",
-        "\t\t\t\tcaptions_dict[id_image].append(caption)\n",
-        "\treturn captions_dict\n",
+        "# def read_captions(filepath):\n",
+        "# \tcaptions_dict = {}\n",
+        "# \twith open(filepath) as f:\n",
+        "# \t\tfor line in f:\n",
+        "# \t\t\tline_split = line.split(sep='\\t', maxsplit=1)\n",
+        "# \t\t\tcaption = line_split[1][:-1]\n",
+        "# \t\t\tid_image = line_split[0].split(sep='#')[0]\n",
+        "# \t\t\tif id_image not in captions_dict:\n",
+        "# \t\t\t\tcaptions_dict[id_image] = [caption]\n",
+        "# \t\t\telse:\n",
+        "# \t\t\t\tcaptions_dict[id_image].append(caption)\n",
+        "# \treturn captions_dict\n",
         "\n",
-        "def get_ids(filepath):\n",
-        "\tids = []\n",
-        "\twith open(filepath) as f:\n",
-        "\t\tfor line in f:\n",
-        "\t\t\tids.append(line[:-1])\n",
-        "\treturn ids\n",
+        "# def get_ids(filepath):\n",
+        "# \tids = []\n",
+        "# \twith open(filepath) as f:\n",
+        "# \t\tfor line in f:\n",
+        "# \t\t\tids.append(line[:-1])\n",
+        "# \treturn ids\n",
         "\n",
-        "def copyfiles(dir_output, dir_input, ids):\n",
-        "\tif not os.path.exists(dir_output):\n",
-        "\t\tos.makedirs(dir_output)\n",
-        "\tfor cur_id in ids:\n",
-        "\t\tpath_input = os.path.join(dir_input, cur_id)\n",
-        "\t\tpath_output = os.path.join(dir_output, cur_id)\n",
-        "\t\ttry:\n",
-        "\t\t  copyfile(path_input, path_output)\n",
-        "\t\texcept OSError:\n",
-        "\t\t  print(\"File error\") \n",
+        "# def copyfiles(dir_output, dir_input, ids):\n",
+        "# \tif not os.path.exists(dir_output):\n",
+        "# \t\tos.makedirs(dir_output)\n",
+        "# \tfor cur_id in ids:\n",
+        "# \t\tpath_input = os.path.join(dir_input, cur_id)\n",
+        "# \t\tpath_output = os.path.join(dir_output, cur_id)\n",
+        "# \t\ttry:\n",
+        "# \t\t  copyfile(path_input, path_output)\n",
+        "# \t\texcept OSError:\n",
+        "# \t\t  print(\"File error\") \n",
         "\n",
-        "def write_captions(dir_output, ids, captions_dict):\n",
-        "\toutput_path = os.path.join(dir_output, 'captions.txt')\n",
-        "\toutput = []\n",
-        "\tfor cur_id in ids:\n",
-        "\t\tif cur_id in captions_dict:\n",
-        "\t\t\tcur_dict = {cur_id: captions_dict[cur_id]}\n",
-        "\t\t\toutput.append(json.dumps(cur_dict))\n",
+        "# def write_captions(dir_output, ids, captions_dict):\n",
+        "# \toutput_path = os.path.join(dir_output, 'captions.txt')\n",
+        "# \toutput = []\n",
+        "# \tfor cur_id in ids:\n",
+        "# \t\tif cur_id in captions_dict:\n",
+        "# \t\t\tcur_dict = {cur_id: captions_dict[cur_id]}\n",
+        "# \t\t\toutput.append(json.dumps(cur_dict))\n",
         "\t\t\n",
-        "\twith open(output_path, mode='w') as f:\n",
-        "\t\tf.write('\\n'.join(output))\n",
+        "# \twith open(output_path, mode='w') as f:\n",
+        "# \t\tf.write('\\n'.join(output))\n",
         "\n",
-        "def segregate(dir_images, filepath_token, captions_path_input):\n",
-        "\tdir_output = {'train': 'train',\n",
-        "\t\t\t\t  'dev'  : 'dev',\n",
-        "\t\t\t\t  'test' : 'test'\n",
-        "\t\t\t\t }\n",
+        "# def segregate(dir_images, filepath_token, captions_path_input):\n",
+        "# \tdir_output = {'train': 'train',\n",
+        "# \t\t\t\t  'dev'  : 'dev',\n",
+        "# \t\t\t\t  'test' : 'test'\n",
+        "# \t\t\t\t }\n",
         "\t\n",
-        "\t# id [caption1, caption2, ..]\n",
-        "\tcaptions_dict = read_captions(filepath_token)\n",
+        "# \t# id [caption1, caption2, ..]\n",
+        "# \tcaptions_dict = read_captions(filepath_token)\n",
         "\t\n",
-        "\t# train, dev, test images mixture\n",
-        "\timages = os.listdir(dir_images)\n",
+        "# \t# train, dev, test images mixture\n",
+        "# \timages = os.listdir(dir_images)\n",
         "\t\n",
-        "\t# read ids\n",
-        "\tids_train = get_ids(captions_path_input['train'])\n",
-        "\tids_dev = get_ids(captions_path_input['dev'])\n",
-        "\tids_test = get_ids(captions_path_input['test'])\n",
+        "# \t# read ids\n",
+        "# \tids_train = get_ids(captions_path_input['train'])\n",
+        "# \tids_dev = get_ids(captions_path_input['dev'])\n",
+        "# \tids_test = get_ids(captions_path_input['test'])\n",
         "\t\n",
-        "\t# copy images to respective dirs\n",
-        "\tcopyfiles(dir_output['train'], dir_images, ids_train)\n",
-        "\tcopyfiles(dir_output['dev'], dir_images, ids_dev)\n",
-        "\tcopyfiles(dir_output['test'], dir_images, ids_test)\n",
+        "# \t# copy images to respective dirs\n",
+        "# \tcopyfiles(dir_output['train'], dir_images, ids_train)\n",
+        "# \tcopyfiles(dir_output['dev'], dir_images, ids_dev)\n",
+        "# \tcopyfiles(dir_output['test'], dir_images, ids_test)\n",
         "\t\n",
-        "\t# write id\n",
-        "\twrite_captions(dir_output['train'], ids_train, captions_dict)\n",
-        "\twrite_captions(dir_output['dev'], ids_dev, captions_dict)\n",
-        "\twrite_captions(dir_output['test'], ids_test, captions_dict)\n",
+        "# \t# write id\n",
+        "# \twrite_captions(dir_output['train'], ids_train, captions_dict)\n",
+        "# \twrite_captions(dir_output['dev'], ids_dev, captions_dict)\n",
+        "# \twrite_captions(dir_output['test'], ids_test, captions_dict)\n",
         "\n",
-        "def load_captions(captions_dir):\n",
-        "\tcaption_file = os.path.join(captions_dir, 'captions.txt')\n",
-        "\tcaptions_dict = {}\n",
-        "\twith open(caption_file) as f:\n",
-        "\t\tfor line in f:\n",
-        "\t\t\tcur_dict = json.loads(line)\n",
-        "\t\t\tfor k, v in cur_dict.items():\n",
-        "\t\t\t\tcaptions_dict[k] = v\n",
-        "\treturn captions_dict\n",
+        "# def load_captions(captions_dir):\n",
+        "# \tcaption_file = os.path.join(captions_dir, 'captions.txt')\n",
+        "# \tcaptions_dict = {}\n",
+        "# \twith open(caption_file) as f:\n",
+        "# \t\tfor line in f:\n",
+        "# \t\t\tcur_dict = json.loads(line)\n",
+        "# \t\t\tfor k, v in cur_dict.items():\n",
+        "# \t\t\t\tcaptions_dict[k] = v\n",
+        "# \treturn captions_dict\n",
         "\n",
         "\n",
-        "dir_images = 'Images/Images/'\n",
-        "dir_text = ''\n",
-        "filename_token = 'Flickr8k.token.txt'\n",
-        "filename_train = 'Flickr_8k.trainImages.txt'\n",
-        "filename_dev = 'Flickr_8k.devImages.txt'\n",
-        "filename_test = 'Flickr_8k.testImages.txt'\n",
-        "filepath_token = os.path.join(dir_text, filename_token)\n",
-        "captions_path_input = {'train': os.path.join(dir_text, filename_train),\n",
-        "              'dev': os.path.join(dir_text, filename_dev),\n",
-        "              'test': os.path.join(dir_text, filename_test)\n",
-        "            }\n",
+        "# dir_images = 'Images/Images/'\n",
+        "# dir_text = ''\n",
+        "# filename_token = 'Flickr8k.token.txt'\n",
+        "# filename_train = 'Flickr_8k.trainImages.txt'\n",
+        "# filename_dev = 'Flickr_8k.devImages.txt'\n",
+        "# filename_test = 'Flickr_8k.testImages.txt'\n",
+        "# filepath_token = os.path.join(dir_text, filename_token)\n",
+        "# captions_path_input = {'train': os.path.join(dir_text, filename_train),\n",
+        "#               'dev': os.path.join(dir_text, filename_dev),\n",
+        "#               'test': os.path.join(dir_text, filename_test)\n",
+        "#             }\n",
         "\n",
-        "tic = time.time()\n",
-        "segregate(dir_images, filepath_token, captions_path_input)\n",
-        "toc = time.time()\n",
-        "print('time: %.2f mins' %((toc-tic)/60))"
+        "# tic = time.time()\n",
+        "# segregate(dir_images, filepath_token, captions_path_input)\n",
+        "# toc = time.time()\n",
+        "# print('time: %.2f mins' %((toc-tic)/60))"
       ],
       "metadata": {
         "id": "5aHT-gM4PRZJ"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!python3 train.py -model Alexnet -dir  -learning_rate 0.1 -epoch 5"
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "from nltk import sent_tokenize"
       ],
       "metadata": {
-        "id": "NG5703l3SybH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-0GbfcTaCXT_",
+        "outputId": "dfa8648b-ddda-4d99-dcb0-318bb99b0f97"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3 train.py -model alexnet -dir train/  -learning_rate 0.1 -epoch 5"
+      ],
+      "metadata": {
+        "id": "NG5703l3SybH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "62160d88-59be-4650-df29-49fa2863f881"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Namespace(dir='train/', embedding_dim=512, epoch=5, gpu_device=None, hidden_dim=512, learning_rate=0.1, model='alexnet', save_iter=10)\n",
+            "File error\n",
+            "train/ loaded\n",
+            "epoch 0 avg_loss 52.095329 time 4.99 mins\n",
+            "Traceback (most recent call last):\n",
+            "  File \"train.py\", line 107, in <module>\n",
+            "    torch.save(cnn.state_dict(), os.path.join(model_name, 'iter_%d_cnn.pkl'%(epoch)))\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torch/serialization.py\", line 376, in save\n",
+            "    with _open_file_like(f, 'wb') as opened_file:\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torch/serialization.py\", line 230, in _open_file_like\n",
+            "    return _open_file(name_or_buffer, mode)\n",
+            "  File \"/usr/local/lib/python3.7/dist-packages/torch/serialization.py\", line 211, in __init__\n",
+            "    super(_open_file, self).__init__(open(name, mode))\n",
+            "FileNotFoundError: [Errno 2] No such file or directory: 'alexnet/iter_0_cnn.pkl'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -189,10 +253,28 @@
         "ls"
       ],
       "metadata": {
-        "id": "vMPI7Qws-JV2"
+        "id": "vMPI7Qws-JV2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f9ace4e6-b052-4c3f-d5bd-b11ebe3a07d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Alexnet.py     Flickr_8k.devImages.txt    Preprocess.py  \u001b[0m\u001b[01;34mtrain\u001b[0m/\n",
+            "captions.txt   Flickr_8k.testImages.txt   \u001b[01;34m__pycache__\u001b[0m/   train.py\n",
+            "DataLoader.py  Flickr8k.token.txt         Resnet152.py   utils.py\n",
+            "Decoder.py     Flickr_8k.trainImages.txt  Resnet.py      Validation.py\n",
+            "DenseNet.py    \u001b[01;34mImages\u001b[0m/                    SqueezeNet.py  Vgg.py\n",
+            "\u001b[01;34mdev\u001b[0m/           Images.zip                 \u001b[01;34mtest\u001b[0m/          Vocabulary.py\n",
+            "\u001b[01;34mFlickr8k\u001b[0m/      Inception.py               test.py\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -207,7 +289,8 @@
     "language_info": {
       "name": "python"
     },
-    "orig_nbformat": 4
+    "orig_nbformat": 4,
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
