Train and test the Model

--- a/metaGen.ipynb
+++ b/metaGen.ipynb
@@ -214,25 +214,25 @@
     {
       "cell_type": "code",
       "source": [
-        "!python3 train.py -model alexnet -dir train/  -learning_rate 0.1 -epoch 5"
+        "!python3 train.py -model alexnet -dir train/  -learning_rate 0.1 -epoch 50"
       ],
       "metadata": {
         "id": "NG5703l3SybH",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62160d88-59be-4650-df29-49fa2863f881"
+        "outputId": "8ffe88f0-e00f-4265-f299-b38814b03973"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Namespace(dir='train/', embedding_dim=512, epoch=5, gpu_device=None, hidden_dim=512, learning_rate=0.1, model='alexnet', save_iter=10)\n",
+            "Namespace(dir='train/', embedding_dim=512, epoch=50, gpu_device=None, hidden_dim=512, learning_rate=0.1, model='alexnet', save_iter=10)\n",
             "File error\n",
             "train/ loaded\n",
-            "epoch 0 avg_loss 52.095329 time 4.99 mins\n",
+            "epoch 0 avg_loss 52.350994 time 4.99 mins\n",
             "Traceback (most recent call last):\n",
             "  File \"train.py\", line 107, in <module>\n",
             "    torch.save(cnn.state_dict(), os.path.join(model_name, 'iter_%d_cnn.pkl'%(epoch)))\n",
@@ -250,28 +250,25 @@
     {
       "cell_type": "code",
       "source": [
-        "ls"
+        "!python3 test.py -model alexnet -i test/54501196_a9ac9d66f2.jpg -epoch 6"
       ],
       "metadata": {
         "id": "vMPI7Qws-JV2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f9ace4e6-b052-4c3f-d5bd-b11ebe3a07d2"
+        "outputId": "012d54b0-66a1-48c2-e540-6134abff73de"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Alexnet.py     Flickr_8k.devImages.txt    Preprocess.py  \u001b[0m\u001b[01;34mtrain\u001b[0m/\n",
-            "captions.txt   Flickr_8k.testImages.txt   \u001b[01;34m__pycache__\u001b[0m/   train.py\n",
-            "DataLoader.py  Flickr8k.token.txt         Resnet152.py   utils.py\n",
-            "Decoder.py     Flickr_8k.trainImages.txt  Resnet.py      Validation.py\n",
-            "DenseNet.py    \u001b[01;34mImages\u001b[0m/                    SqueezeNet.py  Vgg.py\n",
-            "\u001b[01;34mdev\u001b[0m/           Images.zip                 \u001b[01;34mtest\u001b[0m/          Vocabulary.py\n",
-            "\u001b[01;34mFlickr8k\u001b[0m/      Inception.py               test.py\n"
+            "Traceback (most recent call last):\n",
+            "  File \"test.py\", line 33, in <module>\n",
+            "    vocab_size = vocab.index\n",
+            "NameError: name 'vocab' is not defined\n"
           ]
         }
       ]
